[package]
name = "appattest-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
sha2 = "0.10.8"
digest = "0.10.6"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
serde_cbor = "0.11.2"
openssl = "0.10"